tests/errors/intrinsics8.f90
program intrinsics8
    integer(4) :: x = 1
    integer(8) :: y = 2
    print *, ior(x, y)
end program